completed route restrictions
