# routes/swagger-output.json
@@ -210,6 +210,40 @@
         }
       }
     },
+    "/users/auth/login": {
+      "post": {
+        "description": "Login a User",
+        "parameters": [
+          {
+            "name": "User",
+            "in": "body",
+            "description": "Login User",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "email": {
+                  "type": "string",
+                  "example": "professor@byui.edu"
+                },
+                "password": {
+                  "type": "string",
+                  "example": "Potter11?"
+                }
+              },
+              "required": ["email", "password"]
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "User successfully Logged In"
+          },
+          "422": {
+            "description": "Kindly check the provided data"
+          }
+        }
+      }
+    },
     "/users/auth/success": {
       "get": {
         "description": "",
